--- a/src/views/reset.hbs
+++ b/src/views/reset.hbs
@@ -49,13 +49,22 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
-
+    <script src="https://unpkg.com/sweetalert2@7.8.2/dist/sweetalert2.all.js"></script>
     <script>
         const resetForm = document.getElementById('reset');
         const email = `{{{ email }}}`;
         const token = `{{{ token }}}`;
         const serverBaseURL = `{{{ serverBaseURL }}}`;
         const clientUrl = `{{{ clientUrl }}}`;
+        let sweetAlertShowCustom = (title, message, type) => {
+            return swal({
+                title: title,
+                text: message,
+                type: type,
+                button: "Close" // Text on button
+                //built in icons: success, warning, error, info
+            });
+        }
         resetForm.addEventListener("submit", (e) => {
             e.preventDefault();
 
@@ -91,11 +100,12 @@
                     if (response.status != 200) {
                         throw new Error('Link expired');
                     }
-                    alert(data.message);
+
+                    sweetAlertShowCustom('Reset Password Success!', data.message, 'success');
                     return;
                 } catch (err) {
                     console.log(err);
-                    alert(err)
+                    sweetAlertShowCustom('Error Reset Password!', err, 'error');
                     return;
                 }
             })();
