typo sigin to signin

--- a/src/views/passwordResetSuccessful.hbs
+++ b/src/views/passwordResetSuccessful.hbs
@@ -23,7 +23,7 @@
                         email {{email}}</h1>
                     <p class="lead">Password Reset Successful! Click on link below to navigate to signin page</p>
                     <hr class="my-4">
-                    <a class="btn btn-primary btn-lg" href="{{clientUrl}}" role="button">Sigin</a>
+                    <a class="btn btn-primary btn-lg" href="{{clientUrl}}" role="button">Signin</a>
                 </div>
             </div>
         </div>
