--- a/src/views/verify.hbs
+++ b/src/views/verify.hbs
@@ -25,7 +25,7 @@
                     <p class="lead">Now you can click on the button below to signin to the application with your
                         password that you gave during signup</p>
                     <hr class="my-4">
-                    <a class="btn btn-primary btn-lg" href="{{clientUrl}}" role="button">Sigin</a>
+                    <a class="btn btn-primary btn-lg" href="{{clientUrl}}" role="button">Signin</a>
                 </div>
             </div>
         </div>
